--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.12.1
+    container_name: elasticsearch
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
@@ -39,6 +40,7 @@ services:
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.12.1
+    container_name: kibana
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     ports:
@@ -48,6 +50,7 @@ services:
 
   filebeat:
     image: docker.elastic.co/beats/filebeat:8.12.1
+    container_name: filebeat
     user: root
     depends_on:
       - elasticsearch
