--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,10 +63,10 @@ jobs:
             echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
             # Pull the latest image (failsafe)
-            docker-compose pull || { echo "Failed to pull image"; exit 1; }
+            docker compose pull || { echo "Failed to pull image"; exit 1; }
 
             # Start new containers before stopping old ones (zero downtime)
-            docker-compose up -d
+            docker compose up -d
 
             # Remove old, unused containers after ensuring new ones are running
             docker image prune -f
