--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,5 +27,16 @@ services:
     ports:
       - "8080:8080"
 
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:7.17.0
+    container_name: filebeat
+    user: root
+    volumes:
+      - ./logs:/logs:ro
+      - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - spring-app
 volumes:
   pgdata:
