--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
 #version: '3.8'
 
 services:
+  spring-app:
+    build:
+      context: .
+    image: chatbot/ragify:latest
+    container_name: ragify
+    depends_on:
+      - postgres-db
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/postgres
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    ports:
+      - "8080:8080"
+
   postgres-db:
     image: postgres:15
     container_name: postgres_container
@@ -14,18 +29,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
-  spring-app:
-    build: .
-    container_name: silly_lumiere
-    depends_on:
-      - postgres-db
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/postgres
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-    ports:
-      - "8080:8080"
+
 
 #  filebeat:
 #    image: docker.elastic.co/beats/filebeat:7.17.0
