--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,11 +60,13 @@ jobs:
             cd ~/app
 
             # Secure Docker login (prevents exposing credentials)
-            echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
             # Pull the latest image (failsafe)
             docker compose pull || { echo "Failed to pull image"; exit 1; }
-
+            
+            docker ps -a --format '{{.Names}}' | grep -q postgres_container && docker rm -f postgres_container || echo "✅ No conflicting postgres_container"
+            
             # Start new containers before stopping old ones (zero downtime)
             docker compose up -d
 
