--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,6 +67,13 @@ jobs:
             
             docker ps -a --format '{{.Names}}' | grep -q postgres_container && docker rm -f postgres_container || echo "✅ No conflicting postgres_container"
             
+            PORT_IN_USE=$(lsof -ti :8080)
+            if [ ! -z "$PORT_IN_USE" ]; then
+            echo "⚠️ Port 8080 is in use. Killing process $PORT_IN_USE..."
+            kill -9 $PORT_IN_USE
+            fi
+  
+  
             # Start new containers before stopping old ones (zero downtime)
             docker compose up -d
 
